@startuml
Juego "1" *-- "1" Tablero
Juego "1" -- "2..6" Jugador
Juego "1" *-- "*" TarjetaPais
Juego "1" *--- "*" TarjetaObjetivo
Juego .> Moderador
Aleatorio <.Juego


Tablero "1" *-- "6" Continente
Tablero "1" *-- "*" Pais
Continente "1" *-- "1..*" Pais

Jugador "1" -- "1..*" Pais
Jugador "1" -> "*" TarjetaPais

Interface EstadoTarjetaPais
Interface Simbolo

TarjetaPais *-- EstadoTarjetaPais
EstadoTarjetaPais <|.. Activada
EstadoTarjetaPais <|.. Desactivada

TarjetaPais *-- Simbolo
Simbolo <|.. Comodin
Simbolo <|.. Figura


TarjetaObjetivo <|-- TarjetaDestruccion
TarjetaObjetivo <|-- TarjetaOcupacion

Ejercito "1" --> "1" "Dados"
Jugador "1" ---> "1" Canjes
Canjes "1" -- "*" Canje

Pais "1" -> "1" Ejercito
Tablero -> Batalla
Batalla "1" --> "2" Pais

Pais *-- Estado
Estado <|.. Vacante
Estado <|.. Ocupado

TarjetaObjetivo "1" --> "1" Jugador

skinparam classAttributeIconSize 0
class Moderador {
 +pedirPaises(): ListaPaises
 +pedirContinentes(): ListaContinentes
 +pedirTarjetasPais(): ListaTarjetasPais
 +pedirTarjetasObjetivo(): ListaTarjetasObjetivo
}

skinparam classAttributeIconSize 0
class Aleatorio {
 +repartirPaisesAleatoriamente(int cantidadJugadores, listaPaises): listaDeListaDePaises
 +elegirPosicionDelJugadorQueEmpieza(int cantidadJugadores): int posicion
 +agarrarTajetaPaisAleatoriaDelMazo(ListaTarjetasPais)
 +agarrarTajetaObjetivoAleatoriaDelMazo(ListaTarjetasObjetivo)
}


skinparam classAttributeIconSize 0
class Juego {
 +guardarMazoDeTarjetasPais(listaTarjetasPais)
 +guardarMazoDeTarjetasObjetivo(listaTarjetasObjetivo)
 +comenzarFaseInicial (Aleatorio)
 +pasarTurno()
 +colocarEjercitoPrimeraVuelta(nombresDePaises, cantidadEjercitosPorPais)
 +colocarEjercitoSegundaVuelta(nombresDePaises, cantidadEjercitosPorPais)
 +colocarEjercito (String nombrePais, int cantidadEjercito)
 +atacar (String paisAtacante, String paisDefensor, int cantidadEjercito)
 +devolverJugadores(): listaJugadores
 +jugadorDeColorOSiguiente(String colorBuscado, Jugador): Jugador
 +cumplioObjetivo(Jugador jugador): boolean
 +reagrupar(String nombrePaisDesde, String nombrePaisHasta, int cantidadDeEjercito)
 +entregaTarjetaPais(): TarjetaPais
 +devolverTarjetasAlMazo(ListaTarjetasPais)

}



skinparam classAttributeIconSize 0
class Tablero {
 +pasarPaisesAJuego(): listaPaises
 +buscarPais (String nombrePais): Pais
 +atacar(String nombrePaisAtacante, String nombrePaisDefensor, int cantidadEjercito)
 +cantidadPaises(): int
 +cantidadContinentes(): int
}




@enduml